--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
       - run: npm install pm2@latest -g #install pm2 global
       - run: pm2 -V #check pm2 version
       - run: pm2 list #check pm2 list
-      #running pm2 in mode cluster and --watch set to auto restart if index.js have changes.
-      - run: pm2 start -f index.js --watch -i max
+      #running pm2 in mode cluster and --watch set to auto restart if lillith.js have changes.
+      - run: pm2 start -f lillith.js --watch -i max
         
