--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,13 @@ on:
   pull_request:
     branches: [ main ]
 
+  workflow_dispatch:
+
     # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   sync:
     runs-on: self-hosted
     steps:
       - run: git pull origin main
-      - run: npm ci
+      - run: npm install
     
