--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,18 +20,14 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
       - uses: actions/checkout@v3
+        with:
+          clean: false
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm ci
-      - name: Make envfile
-        uses: SpicyPizza/create-envfile@v2.0.1
-        with:
-          envkey_WEBHOOKURL: ${{ secrets.WEBHOOKURL }}
-          envkey_BOTTOKEN: ${{ secrets.BOTTOKEN }}
-          envkey_PORT: ${{ secrets.PORT }}
       - run: npm install pm2@latest -g #install pm2 global
       - run: pm2 -V #check pm2 version
       - run: pm2 list #check pm2 list
