--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
       - run: pm2 -V #check pm2 version
       - run: pm2 list #check pm2 list
       #running pm2 in mode cluster and --watch set to auto restart if lillith.js have changes.
-      - run: pm2 start -f lillith.js --watch -i max
+      - run: pm2 start -f lillith.js
         
