--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.15.2",
     "dotenv": "^16.0.3",
     "express": "^4.14.0",
+    "twitter-api-v2": "^1.15.0",
     "webex-node-bot-framework": "^2.3.14"
   },
   "devDependencies": {
